supset-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: superset-dashboard
  name: superset-dashboard
  namespace: bi 
spec:
  replicas: 1
  selector:
    matchLabels:
      run: superset-dashboard
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: superset-dashboard
    spec:
      containers:
      - image: amancevice/superset:1.0.1
        imagePullPolicy: IfNotPresent
        name: superset-dashboard
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/superset
          name: my-db
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: my-db
        persistentVolumeClaim:
          claimName: superset
