supset-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: superset-dashboard
  name: superset-dashboard
  namespace: bi 
spec:
  ports:
  - port: 80 
    protocol: TCP
    targetPort: 8088
  selector:
    run: superset-dashboard
  type: ClusterIP
